Fix template to catalog products
- Fix left and right button for paginator
- add button Detail
- add truncate text to descrition and name

--- a/E_Shop/static/styles.css
+++ b/E_Shop/static/styles.css
@@ -52,15 +52,21 @@ body{
     font-family: 'Times New Roman', Times, serif;
     font-size:x-large ;
 }
+.btn-wrapper{
+    text-align: center;
+}
 .product-buy-btn{
     background-color: #449;
     color: white;
-    padding: 20px;
+    padding: 15px;
     display: inline-block;
     text-decoration: none;
     position: absolute;
     bottom: 30px;
     right: 25px;
+    width: 110px;
+    height:50px;
+    
 }
 .product-buy-btn:hover{
     font-size: 120%;
@@ -103,4 +109,9 @@ li a:hover {
     left: 800px;
     margin-top: 25px;
     margin-bottom: 0px;
+}
+.btn-detail{
+    text-align: right;
+    padding: 10px;
+    margin-top: 0px;
 }
